--- a/index.html
+++ b/index.html
@@ -1,3 +1,11 @@
 <p> this is my hand made  repo to creat all process to who teach me in <table>
     in this table.. 
 <p>  this is my new repo file in this area of the function</p>
+
+
+{ 
+    "java" : Code with harry
+    "c++" : "code with harry"
+    "python" : Apna College
+    
+}
