--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <p> this is my hand made  repo to creat all process to who teach me in <table>
     in this table.. 
-</table></p>
+</table> hha yahi wala dikhana ki kesa h aur kya karna h sab kuch aese hi show karna koi file 
+idhar udhar mat karna h</p>
